# dremio-mcp-client

./: .gitignore  Dockerfile  generate_dremio_token.sh  gunicorn.conf.py  pyproject.toml  readme.md  token.txt
.github/: setup_template.sh
deploy_scripts/: README.TXT  deploy_dremio.sh  docker-compose.yml
deploy_scripts/init/mysql/: 001_seed.sql
deploy_scripts/init/pgcrm/: 001_seed.sql
dremio_mcp_client/: app.py  dremio_api.py  mcp_bridge.py
dremio_mcp_client/api/example/v1/: blueprint.py
dremio_mcp_client/pages/: blueprint.py
dremio_mcp_client/pages/templates/pages/: base.html  chat.html
dremio_mcp_client/static/css/: mystyles.css  style.css
manifest/: values.yaml
scripts/: build_sass.py
tests/: conftest.py  test_app.py  test_pwa.py  test_wsgi.py
tests/api/example/v1/: test_api.py
